Rightside bar and its functionality implemented and UI layout enhanced

--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "html2canvas": "^1.4.1",
-    "lucide-react": "^0.294.0",
+    "lucide-react": "^0.515.0",
     "react": "^18.2.0",
+    "react-best-gradient-color-picker": "^3.0.14",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
-    "react-resizable": "^3.0.5"
+    "react-moveable": "^0.56.0",
+    "react-resizable": "^3.0.5",
+    "react-selecto": "^1.26.3",
+    "react-zoom-pan-pinch": "^3.7.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^8.56.0",
@@ -33,6 +39,6 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^6.3.5"
   }
 }
